# Vectored

./: .clang-format  .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
cmake/: GoogleTest-CMakeLists.txt.in  Vectored.cmake.in
include/Vectored/: vectored.h  vectored.hpp
src/: CMakeLists.txt  vectored.cpp  vectored.h
test/: CMakeLists.txt  testing.cpp
